improve card layout for mobile

--- a/src/views/Analysis/Overview/AnalysisOverview.module.css
+++ b/src/views/Analysis/Overview/AnalysisOverview.module.css
@@ -14,8 +14,8 @@
 
 .gameList {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
-  grid-template-rows: min-content;
+  grid-template-columns: repeat(auto-fill, minmax(13rem, 1fr));
+  grid-template-rows: 1fr;
   grid-gap: 2em;
   margin-bottom: 3em;
   padding: 1em;
