--- a/src/icons/icons.css
+++ b/src/icons/icons.css
@@ -1,13 +1,13 @@
 .rmwc-icon {
   vertical-align: middle;
 }
-
-/* Icon font */
 @font-face {
   font-family: 'icomoon';
-  src: url('font/icomoon.ttf?qnf9tb') format('truetype'),
-    url('font/icomoon.woff?qnf9tb') format('woff'),
-    url('font/icomoon.svg?qnf9tb#icomoon') format('svg');
+  src: url('font/icomoon.eot?fswwcc');
+  src: url('font/icomoon.eot?fswwcc#iefix') format('embedded-opentype'),
+    url('font/icomoon.ttf?fswwcc') format('truetype'),
+    url('font/icomoon.woff?fswwcc') format('woff'),
+    url('font/icomoon.svg?fswwcc#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -28,18 +28,45 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-o:before {
-  content: '\e900';
+.icon-bug:before {
+  content: '\e868';
 }
-.icon-draw:before {
-  content: '\e901';
+.icon-help:before {
+  content: '\e8fd';
+}
+.icon-replay:before {
+  content: '\e042';
+}
+.icon-share:before {
+  content: '\e80d';
 }
 .icon-x:before {
-  content: '\e902';
+  content: '\e5cd';
+}
+.icon-history:before {
+  content: '\e8b3';
+}
+.icon-info:before {
+  content: '\e88f';
 }
 .icon-arrow-left:before {
   content: '\e314';
 }
 .icon-arrow-right:before {
   content: '\e315';
+}
+.icon-menu:before {
+  content: '\e5d2';
+}
+.icon-o:before {
+  content: '\e836';
+}
+.icon-draw:before {
+  content: '\e15b';
+}
+.icon-game:before {
+  content: '\e338';
+}
+.icon-github:before {
+  content: '\e900';
 }
