cleanup design of NoGameFound

--- a/src/views/Analysis/NoGameFound.module.css
+++ b/src/views/Analysis/NoGameFound.module.css
@@ -1,6 +1,4 @@
-.noGameFoundLayout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+.noGameFound {
+  padding: 1em;
+  color: var(--mdc-theme-primary);
 }
