--- a/src/components/GameFinishedDisplay/GameFinished.module.css
+++ b/src/components/GameFinishedDisplay/GameFinished.module.css
@@ -3,7 +3,9 @@
 }
 
 .winnerIcon {
-  vertical-align: bottom;
+  /* Align icon with text */
+  position: relative;
+  top: 3px;
 }
 
 .restartAlignment {
